# voike

./: .env  .env.example  .gitignore  .voike-node-identity.json  DEPLOYMENT_PLAN.md  Dockerfile  FLOW_ARCHITECTURE.md  FLOW_VS_TYPESCRIPT.md  INSTALL.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  README_PIP.md  RELEASE_NOTES.md  STRUCTURE.md  TESTING_GUIDE.md  WINDOWS_INSTALL.md  docker-compose.yml  install_windows.bat  jest.config.js  package-lock.json  package.json  pyproject.toml  quick-test.sh  setup.py  start.sh  test-api.sh  test-flow-native.sh  test_flow.py  test_flow_docker.py  test_local_cloud.py  tsconfig.build.json  tsconfig.json
adapters/: README.md
cli/: package-lock.json  package.json  tsconfig.json
config/: snrl-endpoints.json  snrl-state.json  vdns-zones.json
docs/: ai_fabric.md  api.md  deployment_baremetal.md  deployment_docker.md  federation.md  heartbeat.md  infinity_fabric.md  kernels.md  migration_guides.md  openapi.yaml  phase3_pop.md  phase4_auto-bootstrap.md  phase5_agents.md  regression_playground.md  resilience_playbooks.md  roadmap.md  voike-agents-module1.md  voike-agents-module2.md  voike-agents-module3.md  voike-agents-module4.md  voike-agents-module5.md  voike-agents-module6.md  voike-agents-module7.md  voike-agents-module8.md  voike-agents-module9.md  vvm.md  whitepaper.md
flow/: README.md  api.md  tsconfig.json
flows/: benchmark.flow  c-playground.flow  fast-agentic-answer.flow  flow-library-test.flow  hybrid-query.flow  omni-ingest.flow  onboard-foreign-app.flow  self-evolution-demo.flow  snrl-semantic.flow  stream-processing.flow  tutorial-ingest.flow  tutorial-math.flow  vdns-zone-sync.flow  voike-bible.flow  voike-grid.flow  voike-meta.flow  voike-regression.flow  voike-self-evolve.flow  voike.flow
peacock/: README.md  vpkg.yaml
scripts/: .env.example  docker-entrypoint.sh  export_ledger.py  genesis_seed.js  grid.py  install_voike_linux.sh  install_voike_mac.sh  install_voike_windows.ps1  ledger_replay.py  make_capsule_snapshot.py  offline_sync.py  regression.ts  rpc.py  run_voike_windows.ps1  set_shared_db.js  test_genesis.sh  test_local.sh  verify_pop.py  voike_full_system_regression.py  voike_heartbeat.py  (+2 more)
services/uor-engine/: Cargo.toml  README.md
services/uor-engine/src/: main.rs
(+237 files in other folders)
