[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voike"
version = "0.1.0"
description = "VOIKE Python CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[project.scripts]
voike = "voike.cli:main"

[tool.setuptools]
packages = ["voike"]

